syntax = "proto3";

option csharp_namespace = "client";

package demo;

service Demo {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
